grammar.js
    source_file: $ => choice(repeat(seq($._definition, optional(';'))), $._expression),

    // For debugging purposes
    //source_file: $ => $._expression,
    //source_file: $ => repeat(seq($._definition, optional(';'))),

    _definition: $ => choice(
      $.altstep,
      $.altstep_type,
      $.class_type,
      $.component_type,
      $.configuration,
      $.const_decl,
      $.constructor,
      $.control,
      $.enumerated_type,
      $.external_function,
      $.friend,
      $.func,
      $.function_type,
      $.group,
      $.import_definition,
      $.map_type,
      $.mode_definition,
      $.module,
      $.module_parameter,
      $.port_type,
      $.record_of_type,
      $.record_type,
      $.set_of_type,
      $.set_type,
      $.signature,
      $.subtype,
      $.template,
      $.testcase,
      $.testcase_type,
      $.union_type,
      $.var_decl,
      $.timer_decl,
      $.port_decl,
    ),

    module: $ => seq(
      'module',
      $._parameterized_name,
      field('language_spec', optional($.language_spec)),
      $._definition_body,
      field('attributes', optional($.attributes)),
    ),

    func: $ => seq(
      field('visibility', optional($.visibility)),
      'function',
      field('modifiers', optional($.template_modifier)),
      $._parameterized_name,
      field('parameters', $.parameters),
      field('extends', optional(seq('extends', $.reference))),
      field('runs_on', optional(seq('runs', 'on', $.reference))),
      field('system', optional(seq('system', $.reference))),
      field('return_type', optional($.return_type)),
      field('body', optional($.block)),
      field('attributes', optional($.attributes)),
    ),

    testcase: $ => seq(
      field('visibility', optional($.visibility)),
      'testcase',
      $._parameterized_name,
      field('parameters', $.parameters),
      optional(choice(
        field('execute_on', seq('execute', 'on', $.reference)),
        field('runs_on', seq('runs', 'on', $.reference, optional(seq('system', $.reference)))),
      )),
      field('body', optional($.block)),
      field('attributes', optional($.attributes)),
    ),

    subtype: $ => seq(
      field('visibility', optional($.visibility)),
      'type',
      field('super_type', $.nested_type),
      $._parameterized_name,
      field('value_constraint', optional($.template_values)),
      field('length_constraint', optional($.length_spec)),
      field('attributes', optional($.attributes)),
    ),

    record_type: $ => seq(
      field('visibility', optional($.visibility)),
      'type', 'record',
      $._parameterized_name,
      '{',
      field('fields', sepBy(',', $.field)),
      '}',
      field('attributes', optional($.attributes)),
    ),

    var_decl: $ => seq(
      field('visibility', optional($.visibility)),
      'var',
      field('template_restriction', optional($.nested_template)),
      field('type', optional($.nested_type)),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),

    template: $ => seq(
      field('visibility', optional($.visibility)),
      'template',
      field('restriction', optional(seq('(', $.template_restriction, ')'))),
      field('modifiers', optional($.template_modifier)),
      field('type', optional($.name)),
      $._parameterized_name,
      field('parameters', optional($.parameters)),
      field('modifies', optional(seq('modifies', $.reference))),
      ':=',
      $._expression,
      field('attributes', optional($.attributes)),
    ),

    module_parameter: $ => seq(
      field('visibility', optional($.visibility)),
      'modulepar',
      field('template_restriction', optional($.nested_template)),
      field('type', optional($.nested_type)),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),


    const_decl: $ => seq(
      field('visibility', optional($.visibility)),
      'const',
      field('template_restriction', optional($.nested_template)),
      field('type', optional($.nested_type)),
      field('declarators', sepBy1(',', $.declarator)),
      field('attributes', optional($.attributes)),
    ),

    _expression: $ => choice(
      $.or_expression,
      $.xor_expression,
      $.and_expression,
      $.not_expression,
      $.equal_expression,
      $.rel_expression,
      $.shift_expression,
      $.bit_or_expression,
      $.bit_xor_expression,
      $.bit_and_expression,
      $.bit_not_expression,
      $.add_expression,
      $.mul_expression,
      $.unary_expression,
      $.primary,
    ),

    add_expression: $ => prec.left(PREC.additive, seq(
      field('left', $._expression),
      field('operator', choice('+', '-', '&')),
      field('right', $._expression),
    )),

    primary: $ => choice(
      'null',
      'omit',
      prec(146, '-'),
      $.boolean_literal,
      $.verdict_literal,
      $.number,
      $.reserved_number,
      $.charstring,
      $.bitstring,
      $.hexstring,
      $.octetstring,
      $.template_values,
      $.composite_literal,
      $.compound_value,
      $.function_literal,
      $.inline_template,
      alias('testcase', $._identifier),
      $.decoded_field_reference,
      $.parenthesized_expression,
      $.presence_check,
      $.predefined_func_call,
      $.reference,
    ),

    // ConstantExpression (Annex A.534): a stricter form of Expression
    // used in type lists, enum values, modulepars, and other contexts
    // where function calls and mutable variable references are forbidden.
    // The grammar can't enforce this; it produces a distinct AST node so
    // downstream tools can.
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    composite_literal: $ => seq(
      '{', sepBy1(',', $._expression), '}',
    ),

    // Compound value (Annex B / A.527): assignment notation `{ field := expr, … }`.
    // Distinct from composite_literal (the list notation `{ expr, … }`).
    compound_value: $ => seq(
      '{',
      sepBy1(',', seq(field('field', $.name), ':=', field('value', $._expression))),
      '}',
    ),

    reference: $ => choice(
      $.type_instantiation_expression,
      $.selector_expression,
      $.index_expression,
      $.function_call_expression,
      $._identifier,
      alias('this', $._identifier),
      alias('self', $._identifier),
      alias('???', $._identifier),
      alias(seq('all', 'port'), $._identifier),
      alias(seq('any', 'port'), $._identifier),
      alias(seq('all', 'timer'), $._identifier),
      alias(seq('any', 'timer'), $._identifier),
      alias(seq('all', 'component'), $._identifier),
      alias(seq('any', 'component'), $._identifier),
    ),

    function_call_expression: $ => prec.left(PREC.primary, choice(
      seq(
        field('function', $.reference),
        '(',
        field('arguments', sepBy(',', $._expression)),
        field('variadic', optional('...')),
        ')'),
      seq(
        field('function', seq('any', 'from')),
        field('arguments', alias($._identifier, $.reference))),
      seq(
        field('function', seq('all', 'from')),
        field('arguments', alias($._identifier, $.reference))), // TODO: use correct expressions instead of just identifier
    )),

    // Decoded field reference: `reference => Type`. Per TTCN-3 Annex A.560
    // this re-interprets an already-decoded bitstream field as the given
    // type. The right-hand side is a type reference, not an arbitrary
    // expression.
    _parameterized_name: $ => seq(
      field('name', $.name),
      field('type_parameters', optional($.type_parameters)),
    ),

    _definition_body: $ => seq(
      '{',
      repeat(seq($._definition, optional(';'))),
      '}',
    ),

    block: $ => seq(
      field('body', $._basic_block),
      field('catches', repeat($.catch_clause)),
      field('finally', optional($.finally_clause)),
    ),

    _basic_block: $ => seq('{', repeat(seq($._statement, optional(';'))), '}'),
    return_stmt: $ => seq('return', optional($._expression)),

    nested_type: $ => $.reference,

    declarator: $ => seq(
      $._parameterized_name,
      field('value', optional(seq(':=', $._expression))),
    ),

    field: $ => seq(
      field('default', optional('@default')),
      field('type', $.nested_type),
      field('name', optional($.name)),
      field('array_def', optional($.array_def)),
      field('value_constraint', optional($.template_values)),
      field('length_constraint', optional($.length_spec)),
      field('optional', optional('optional')),
    ),

    parameters: $ => seq(
      '(',
      sepBy(',', $.parameter),
      ')'
    ),

    parameter: $ => seq(
      field('direction', optional(choice('in', 'out', 'inout'))),
      field('template_restriction', optional($.nested_template)),
      field('type', $.nested_type),
      field('name', $.name),
      field('array_def', optional($.array_def)),
      field('variadic', optional('...')),
      field('default', optional(seq(':=', $._expression))),
    ),

    return_type: $ => seq(
      'return',
      field('template_restriction', optional($.nested_template)),
      field('type', $.nested_type),  // NOTE: Nested types support ArrayDef due to index_expression in reference
    ),

    nested_template: $ => choice(
      seq("template", optional(seq('(', $.template_restriction, ')'))),
      $.template_restriction
    ),

    template_restriction: _ => choice("omit", "value", "present"),

    template_modifier: _ => choice(
      '@fuzzy',
      '@deterministic',
      '@abstract',
      seq('@fuzzy', '@deterministic'),
      seq('@fuzzy', '@abstract'),
      seq('@deterministic', '@abstract'),
      seq('@fuzzy', '@deterministic', '@abstract'),
    ),

    name: $ => $._identifier,

    _identifier: _ => /[a-zA-Z_]\w*/,

    number: _ => token(seq(/\d+(\.\d+)?/, optional(/[eE][+-]?[0-9][0-9_]*/),)),

    charstring: _ => /\"(\\.|\"\"|[^\"])*\"/,
